# splittable

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  run_tests.sh  run_tests_var_read.sh
apps/: check_random_device_determinism.cpp  check_rng_alignment.cpp  check_stl_parallelism.cpp  microbenchmark.cpp  test.cpp  test_immer_overhead.cpp  test_rng_distribution.cpp  test_rng_throughput.cpp  test_variable_read.cpp  test_wvar_alignment.cpp  vacation.cpp  validate.cpp
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
headers/splittable/: splittable.hpp
headers/splittable/mrv/: manager.hpp  mrv.hpp  mrv_flex_vector.hpp
headers/splittable/pr/: manager.hpp  pr.hpp  pr_array.hpp
headers/splittable/single/: single.hpp
headers/splittable/utils/: random.hpp
include/splittable/: splittable.hpp
include/splittable/mrv/: manager.hpp  mrv.hpp  mrv_array.hpp  mrv_flex_vector.hpp
results/dissertation/: mrv-adjust-ubench.csv  mrv-adjust-vacation-high.csv  mrv-balance-ubench.csv  mrv-balance-vacation.csv  test_immer_overhead.csv  test_rng_throughput.csv  test_wvar_alignment-256.csv  test_wvar_alignment-64-2nd.csv  ubench-final.csv  vacation-final-high.csv  vacation-final-low.csv
results/inforum/: test-fixed-padding.csv  test-read-percentage-8c.csv  test-variable-padding-8c.csv
scripts/: generate_balance_analysis_table.py  generate_client_graph.py  generate_client_graph_abort_rate.py  generate_client_graph_adjust_time.py  generate_client_graph_execution_time.py  generate_client_graph_phase_time.py  generate_client_graph_throughput.py  generate_client_graph_type_throughput.py  generate_density_graph.py  generate_padding_graph_abort_rate.py  generate_padding_graph_throughput.py  generate_padding_graph_type_throughput.py  generate_power_graph_execution_time.py  generate_power_graph_operations.py  generate_read_percentage_graph_abort_rate.py  generate_read_percentage_graph_adjust_time.py  generate_read_percentage_graph_phase_time.py  generate_read_percentage_graph_type_throughput.py  generate_record_graph_abort_rate.py  generate_record_graph_balance_time.py  generate_record_graph_execution_time.py  generate_record_graph_throughput.py  generate_record_graph_type_throughput.py  generate_wvar_alignment_table.py  run_microbenchmark.sh  run_test.sh  run_test_immer_overhead.sh  run_test_rng_distribution.sh  run_test_rng_throughput.sh  run_test_variable_read.sh  run_test_wvar_alignment.sh  run_vacation.sh
source/: main.cpp  splittable.cpp  test.cpp  test_variable_read.cpp  validate.cpp
source/mrv/: manager.cpp  mrv.cpp  mrv_array.cpp  mrv_flex_vector.cpp
source/pr/: manager.cpp  pr.cpp  pr_array.cpp
source/single/: single.cpp
source/utils/: random.cpp
test/: CMakeLists.txt
test/source/: splittable_test.cpp
(+38 files in other folders)
